# LibraryLoader

./: CMakeLists.txt  README.md
example/: example.cpp
example/mylib/: Box.cpp  Box.hpp  mylib.cpp  mylib.hpp
example/mylib/common/: box.h  common.h  function_pointers.h
example/mylib/private/: box_impl.cpp
include/: LibraryLoader.h  LibraryLoader.impl.hpp
src/: LibraryLoader.h  LibraryLoader.impl.hpp
